# Hubbard

./: 2nd_multiple_params.sh  3rd_multiple_params.sh  CMakeLists.txt  CMakePresets.json  Makecluster  Makefile  Makefile_old  README.md  all_exec.sh  batch_cube.sh  batch_small_cube.sh  batch_small_square.sh  batch_square.sh  debug.sh  dispersions.sh  exec.sh  exec_modes.sh  mkl_modes.sh  multiple_params.sh  tester.sh  u_boundary.sh
cmake/: CascadelakeCompilerFlags.cmake  DefaultCompilerFlags.cmake  IcelakeCompilerFlags.cmake  hubbard_options.cmake  include_settings.cmake
params/: T.config  T_finite.config  U_negative.config  U_positive.config  V_negative.config  V_positive.config  auto.config  auto_2.config  auto_3.config  cluster_cube.config  dispersions.config  modes.config  small_cube.config  small_square.config  test.config  ul_square.config  unknown_boundary.config
slurm/: T.slurm  T_finite.slurm  U_neg.slurm  U_pos.slurm  V_neg.slurm  V_pos.slurm  modes_cube.slurm  modes_small_cube.slurm  modes_small_square.slurm  modes_square.slurm  ultralong_cube.slurm  ultralong_square.slurm  unknown_boundary.slurm  unknown_boundary_square.slurm
sources/: Hubbard.cpp  HubbardMeanField.cpp
sources/Handler/: CMakeLists.txt  HandlerBase.cpp  HandlerBase.hpp  ModeDispersionHandler.cpp  ModeDispersionHandler.hpp  ModeHandler.cpp  ModeHandler.hpp  PhaseHandler.cpp  PhaseHandler.hpp  TestHandler.cpp  TestHandler.hpp  UnknownBoundaryHandler.cpp  UnknownBoundaryHandler.hpp
sources/Hubbard/: Constants.hpp  GlobalDefinitions.hpp  MomentumIndexUtility.hpp  NumericalMomentum.hpp
sources/Hubbard/DensityOfStates/: BaseDOS.cpp  BaseDOS.hpp  CMakeLists.txt  DOSIntegrator.hpp  SimpleCubic.cpp  SimpleCubic.hpp  Square.cpp  Square.hpp  tanh_sinh_helper.hpp
sources/Hubbard/Helper/: CMakeLists.txt  DOSGeneral.hpp  DOS_XP.hpp  DetailModelConstructor.hpp  GeneralBasis.cpp  GeneralBasis.hpp  ModeHelper.cpp  ModeHelper.hpp  PhaseHelper.cpp  PhaseHelper.hpp  Plaquette.cpp  Plaquette.hpp  SquareGeneral.cpp  SquareGeneral.hpp  SquareXP.cpp  SquareXP.hpp  TermOnSquare.cpp  TermOnSquare.hpp  TermWithDOS.hpp  XPModes.cpp  XPModes.hpp
sources/Hubbard/Models/: BaseModel.hpp  CMakeLists.txt  EMCoupling.cpp  EMCoupling.hpp  ModelAttributes.hpp  ModelParameters.cpp  MomentumBasedModel.hpp
sources/Hubbard/Models/ChainLattice/: ChainTripletPairing.cpp  Model1D.hpp
sources/Hubbard/Models/DOSModels/: BroydenDOS.hpp  DOSBasedModel.hpp  PhaseSeparationDOS.hpp
sources/Hubbard/Models/SquareLattice/: HubbardCDW.cpp  Model2D.hpp  SquareTripletPairing.cpp  UsingBroyden.cpp  UsingBroyden.hpp
test_params/: cdw.config  sc_cdw.config
tests/: afm.config  cdw.config  plot.py  sc_cdw.config  test_config.cmake
